# ISRO_BAH_25_Team

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: logging.conf  settings.py
config/docker/: Dockerfile.backend  Dockerfile.frontend
deployments/ansible/backend/tasks/: main.yml
deployments/ansible/inventory/: development.ini  production.ini  staging.ini
deployments/ansible/playbooks/: backup.yml  deploy.yml  monitoring.yml
deployments/ansible/roles/database/tasks/: main.yml
deployments/ansible/roles/frontend/tasks/: main.yml
deployments/ansible/roles/monitoring/tasks/: main.yml
deployments/docker/: Dockerfile.backend  Dockerfile.frontend  Dockerfile.nginx  Dockerfile.streamlit  docker-compose.prod.yml  docker-compose.yml
deployments/helm/: Chart.yaml  values-prod.yaml  values-staging.yaml  values.yaml
deployments/kubernetes/: backend-deployment.yaml  configmap.yaml  database-deployment.yaml  frontend-deployment.yaml  ingress.yaml  namespace.yaml  neo4j-deployment.yaml  redis-deployment.yaml  secrets.yaml
deployments/terraform/: main.tf  outputs.tf  variables.tf
deployments/terraform/environments/: dev.tfvars  prod.tfvars  staging.tfvars
docs/architecture/: system_design.md
scripts/data/: build_knowledge_graph.py  process_documents.py  scrape_mosdac.py
scripts/deployment/: deploy.sh
scripts/setup/: install_dependencies.sh
src/backend/: main.py
src/backend/app/: __init__.py
src/backend/app/api/: __init__.py
src/backend/app/api/v1/endpoints/: chat.py  documents.py  health.py  scraper.py  search.py
src/backend/app/core/: config.py  dependencies.py  exceptions.py  security.py
src/backend/app/middleware/: cors.py  logging.py  rate_limit.py
src/backend/app/services/: database.py  embedding_service.py  neo4j_client.py  rag_service.py  redis_client.py
src/backend/app/utils/: __init__.py  helpers.py  logger.py  validators.py
src/backend/data_ingestion/: __init__.py
src/backend/data_ingestion/pipelines/: ingestion_pipeline.py
src/backend/data_ingestion/processors/: data_processor.py  text_processor.py
src/backend/data_ingestion/scrapers/: base_scraper.py  mosdac_scraper.py  realtime_scraper.py
src/backend/knowledge_graph/construction/: __init__.py  entity_extractor.py  graph_builder.py  relation_extractor.py
src/backend/knowledge_graph/ontology/: __init__.py  mosdac_ontology.py  schemas.py
src/backend/knowledge_graph/queries/: __init__.py  cypher_queries.py  sparql_queries.py
src/backend/tests/unit/: test_api.py
src/frontend/react_app/src/: App.tsx
src/frontend/react_app/src/components/Chat/: ChatInterface.tsx
src/frontend/react_app/src/components/Common/: Header.tsx  (+1 more)
src/frontend/react_app/src/hooks/: useChat.ts  useSearch.ts
src/frontend/react_app/src/services/: api.ts
src/frontend/react_app/src/types/: chat.ts
src/frontend/streamlit_app/: main.py
src/frontend/streamlit_app/components/: chat_interface.py  search_interface.py  visualization.py
src/frontend/streamlit_app/pages/: analytics.py  home.py  settings.py
src/frontend/streamlit_app/utils/: api_client.py  helpers.py
